--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -10,7 +10,7 @@
       </intent-filter>
     </activity>
     <meta-data android:name="nreal_sdk" android:value="true" />
-    <meta-data android:name="com.nreal.supportDevices" android:value="NrealLight" />
+    <meta-data android:name="com.nreal.supportDevices" android:value="NrealLight|NrealAir" />
   </application>
   <uses-permission android:name="android.permission.BLUETOOTH" />
   <uses-permission android:name="android.permission.RECORD_AUDIO" />
